Landing spacing fixed for avatar and paragraphs

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -156,6 +156,7 @@ button:hover {
   justify-content: center;
   align-self: center;
   display: inline-block;
+  padding-bottom: 2rem;
 }
 /* .ben-craib,
 .ux,
